syntax = "proto3";

package cws.common;

message ReturnMsg {
	int32 err_code = 1;
	string err_msg = 2;
}

enum Gender {
	MALE = 0;
	FEMALE = 1;
}
